src/objects/Contact_Language__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Languages</relationshipLabel>
        <relationshipName>Contact_Languages</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Contact Languages</relationshipLabel>
        <relationshipName>Contact_Languages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contact Language</label>
    <nameField>
        <displayFormat>CLI-{0000}</displayFormat>
        <label>Contact Language Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Languages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>